moved figures/docs/extdata to BeatyExperimentData

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ exportMethods(baf, "baf<-",
 	      rbind,
 	      state,
 	      updateObject,
+	      width,
 	      xsegment,
 	      xyplot)
 export(beadstudiodir,
