Removed scripts to BeatyExperimentData

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,7 @@ exportClasses(DataFrameCNV, RangedDataCNV, RangedDataCBS, RangedDataHMM,
 exportMethods(baf, "baf<-",
 	      calculateMindist,
 	      computeBayesFactor,
-	      copyNumber,
+	      ##copyNumber,
 	      coverage,
 	      fatherNames,
 	      logR, "logR<-",
@@ -48,30 +48,24 @@ exportMethods(baf, "baf<-",
 	      width,
 	      xsegment,
 	      xyplot)
-export(beadstudiodir,
-       completeTrios,
+export(completeTrios,
        concAtTop,
        fmoNames,
        fullId,
-       getAllBayesFactorRanges,
        getKey,
        gridlayout,
-       harmonizeStates,
        isDenovo,
        loadBatchFiles,
        minimumDistance,
        minimumDistanceCalls,
        my.xypanel,
-       pennDenovoFreq,
-       pennStats,
        prepanel.fxn,
        readPedfile,
-       readPennCnv,
-       readPennFiles,
        RangedDataCNV,
        RangedDataCBS,
        RangedDataHMM,
-       ssampleNames, sssampleNames, ss, s,
+       ssampleNames,
+       sssampleNames, ss, s,
        todf,
        xypanel)
 
