--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: MinimumDistance
 Type: Package
 Title: Methods for denovo CNV detection
-Version: 0.0.71
+Version: 0.0.72
 Date: 11/13/2010
 Author: Robert B Scharpf
 Maintainer: Robert B Scharpf <rscharpf@jhsph.edu>
 Description: Analysis of denovo copy number variants in trios using the Illumina platform
 License: Artistic-2.0
-Depends: oligoClasses (>= 1.15.7), lattice, grid
-Imports: ff (>= 2.2-1), Biobase, crlmm, utils, IRanges, DNAcopy
+Depends: oligoClasses (>= 1.15.7), lattice, grid, DNAcopy
+Imports: ff (>= 2.2-1), Biobase, crlmm, utils, IRanges
 collate: AllClasses.R
          AllGenerics.R
 	 methods-AnnotatedDataFrame.R
