--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export("[", completeTrios,
        minimumDistance,
        minimumDistanceCalls,
        my.xypanel,
+       plotRange,
        prepanel.fxn,
        RangedDataCNV,
        RangedDataCBS,
