Revised the narrow function to take a threshold as an argument.  The minimum distance ranges are only narrowed if nonzero (e.g., above the user-specified threshold).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export("[", completeTrios,
        minimumDistance,
        minimumDistanceCalls,
        my.xypanel,
+       narrow,
        plotRange,
        prepanel.fxn,
        RangedDataCNV,
