Adjustments for gridlayout2 display

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,10 +54,12 @@ export("[", completeTrios,
        fullId,
        getKey,
        gridlayout,
+       gridlayout2,
        isDenovo,
        loadBatchFiles,
        minimumDistance,
        minimumDistanceCalls,
+       minimumDistancePlot,
        my.xypanel,
        narrow,
        plotRange,
